                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (18 Oct 2009)
- Fixed memory leak in the SCP/SFTP code as it never freed the knownhosts
  data!

- John Dennis filed bug report #2873666
  (http://curl.haxx.se/bug/view.cgi?id=2873666) which identified a problem
  which made libcurl loop infinitely when given incorrect credentials when
  using HTTP GSS negotiate authentication. He also provided a small and simple
  patch for it.

- Kevin Baughman found a double close() problem with libcurl-NSS, as when
  libcurl called NSS to close the SSL "session" it also closed the actual
  socket.

Yang Tse (17 Oct 2009)
- Bug report #2866724 indicated
  (http://curl.haxx.se/bug/view.cgi?id=2866724) that curl on Windows failed
  when writing files whose file names originally contained characters which
  are not valid for file names on Windows. Dan Fandrich provided an initial
  patch and another revised one to fix this issue.

Daniel Stenberg (1 Oct 2009)
- Tom Mueller correctly reported in bug report #2870221
  (http://curl.haxx.se/bug/view.cgi?id=2870221) that libcurl returned an
  incorrect return code from the internal trynextip() function which caused
  him grief. This is a regression that was introduced in 7.19.1 and I find it
  strange it hasn't hit us harder, but I won't persue into figuring out
  exactly why.
 
- Constantine Sapuntzakis: The current implementation will always set
  SO_SNDBUF to CURL_WRITE_SIZE even if the SO_SNDBUF starts out larger.  The
  patch doesn't do a setsockopt if SO_SNDBUF is already greater than
  CURL_WRITE_SIZE. This should help folks who have set up their computer with
  large send buffers.

Daniel Stenberg (27 Sep 2009)